# despliegue-modelos

./: .gitignore  app.py  pyproject.toml  readme.md  service.py  test.ipynb
data/: test_data.csv
training/: main.py  pipeline.py
