[project]
name = "hotel-cancellation-service"
version = "0.1.0"
description = "Add your description here"
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
    # Framework para servir modelos de ML en producción
    "bentoml==1.4.17",
    # Librería para serialización y deserialización de modelos
    "joblib==1.5.1",
    # Librería para computación numérica y arrays
    "numpy==2.3.1",
    # Librería para manipulación y análisis de datos
    "pandas==2.3.1",
    # Librería para machine learning (modelos, preprocesamiento, evaluación)
    "scikit-learn==1.7.0",
]

[dependency-groups]
dev = [
    "black[jupyter]>=25.1.0",
    "isort>=6.0.1",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.4",
]
